# SerialTest

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: release.yml
doc/README/: README_zh_CN.md
src/: .gitignore  Info.plist  SerialTest.pro  appstyle.cpp  appstyle.h  connection.cpp  controlitem.cpp  controlitem.h  ctrltab.cpp  datatab.cpp  datatab.h  devicetab.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mycustomplot.cpp  mysettings.cpp  plottab.h  qcustomplot.cpp  qcustomplot.h  sessiondata.cpp  sessiondata.h  settingstab.cpp  settingstab.h  util.cpp  util.h
src/android/: build.gradle
src/theme/: modern-dark.qss  modern-light.qss  theme.qrc
src/ui/: settingstab.ui
tests/: CMakeLists.txt  test_util.cpp
